--- a/index.html
+++ b/index.html
@@ -72,9 +72,7 @@
                         <img src="moi/d3324fa9-9f9e-49dd-a6cf-26819878fb84.jpeg" alt="Paul Briand" class="hero-photo">
                     </div>
                     <a href="https://www.linkedin.com/in/paul-briand-285170247/" target="_blank" rel="noopener noreferrer" class="linkedin-btn">
-                        <svg width="20" height="20" viewBox="0 0 20 20" fill="currentColor">
-                            <path d="M4.5 2a2.5 2.5 0 100 5 2.5 2.5 0 000-5zM3 8h3v10H3V8zm5.5 0h2.9v1.4h.04c.4-.8 1.4-1.6 2.87-1.6 3.07 0 3.64 2.02 3.64 4.65v5.56h-3.04v-4.92c0-1.17-.02-2.68-1.64-2.68-1.64 0-1.89 1.28-1.89 2.61v4.99H8.5V8z"/>
-                        </svg>
+                        <span class="linkedin-icon">in</span>
                         LinkedIn
                     </a>
                 </div>
