Ajouts détails UK + Suède

--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
                         </div>
                         <div class="country-info">
                             <h3>Angleterre</h3>
-                            <p class="country-period">Année et contexte de l'expérience...</p>
-                            <p class="country-description">Décris ton expérience en Angleterre, ce que tu as appris, les points marquants...</p>
+                            <p class="country-period"><strong>2024–2025 :</strong>  échange universitaire à l’Université de Staffordshire.</p>
+                            <p class="country-description">1ère expérience internationale en autonomie, immersion dans un environnement académique anglophone et découverte d’un
+                            système universitaire étranger.</p>
                         </div>
                     </div>
 
@@ -190,8 +191,12 @@
                         </div>
                         <div class="country-info">
                             <h3>Suède</h3>
-                            <p class="country-period">Année et contexte de l'expérience...</p>
-                            <p class="country-description">Décris ton expérience en Suède, ce que tu as appris, les points marquants...</p>
+                            <p class="country-period"><strong>2025-2026 : </strong> stage de recherche dans les laboratoires d’ABB, soutenu par l’Université de Mälardalen.</p>
+                            <p class="country-description">Travail sur le projet LIMB, un bras robotisé autonome mis en place pour soutenir des patients infirmes.</p>  
+                                                        <p class="country-description">Ma contribution a porté sur le traitement des données, la mise en place d’une simulation à la physique réaliste afin
+                                                        d’effectuer des tests, ainsi que l’implémentation d’algorithmes d’intelligence artificielle pour fluidifier les
+                                                        mouvements et reconnaître l’environnement autour du robot.</p>
+
                         </div>
                     </div>
                 </div>
