--- a/index.html
+++ b/index.html
@@ -208,19 +208,55 @@
             <div class="content-wrapper">
                 <h2>Projets Personnels</h2>
                 <div class="projects-grid">
+                    <!-- Projet Minecraft -->
                     <div class="project-card">
                         <div class="project-media">
-                            <video autoplay muted loop playsinline class="project-video">
-                                <source src="project-video.mp4" type="video/mp4">
-                            </video>
+                            <div class="minecraft-carousel" data-project="minecraft">
+                                <img src="images_minecraft/MCillustration1.png" alt="Minecraft - Vieux Port" class="carousel-image active">
+                                <img src="images_minecraft/MCillustration7.png" alt="Minecraft - Cathédrale" class="carousel-image">
+                                <img src="images_minecraft/MCillustration4.png" alt="Minecraft - Chateau" class="carousel-image">
+                                <img src="images_minecraft/minecraft21.png" alt="Minecraft - Bibliothèque" class="carousel-image">
+                                <div class="carousel-controls">
+                                    <button class="carousel-prev" aria-label="Image précédente">←</button>
+                                    <button class="carousel-next" aria-label="Image suivante">→</button>
+                                </div>
+                                <div class="carousel-indicators"></div>
+                            </div>
                         </div>
                         <div class="project-info">
-                            <h3>Nom du projet</h3>
-                            <p class="project-description">Description courte du projet et tes apprentissages...</p>
+                            <h3>Projet Minecraft Collectif</h3>
+                            <p class="project-description">Une aventure architecturale épique menée par une vingtaine de passionnés. Construction d'un monde complet avec cathédrale, remparts, places publiques et structures complexes.</p>
                             <div class="tech-tags">
-                                <span class="tech-tag">Tech 1</span>
-                                <span class="tech-tag">Tech 2</span>
+                                <span class="tech-tag">Collaboration d'équipe</span>
+                                <span class="tech-tag">Architecture</span>
+                                <span class="tech-tag">Planification</span>
                             </div>
+                            <a href="minecraftpage.html" style="display: inline-block; margin-top: 1.5rem; color: var(--accent-color); font-weight: 600; text-decoration: none;">Voir le projet →</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Illustrations du projet Minecraft -->
+                <div style="margin-top: 5rem; padding-top: 3rem; border-top: 1px solid rgba(0, 0, 0, 0.05);">
+                    <h3 style="margin-bottom: 2rem;">Illustrations et rendus du projet</h3>
+                    <div class="minecraft-illustrations-grid">
+                        <div class="illustration-card">
+                            <img src="images_minecraft/MCillustration1.png" alt="Illustration Minecraft 1">
+                        </div>
+                        <div class="illustration-card">
+                            <img src="images_minecraft/MCillustration2.png" alt="Illustration Minecraft 2">
+                        </div>
+                        <div class="illustration-card">
+                            <img src="images_minecraft/MCillustration3.png" alt="Illustration Minecraft 3">
+                        </div>
+                        <div class="illustration-card">
+                            <img src="images_minecraft/MCillustration4.png" alt="Illustration Minecraft 4">
+                        </div>
+                        <div class="illustration-card">
+                            <img src="images_minecraft/MCillustration5.png" alt="Illustration Minecraft 5">
+                        </div>
+                        <div class="illustration-card">
+                            <img src="images_minecraft/MCillustration6.png" alt="Illustration Minecraft 6">
                         </div>
                     </div>
                 </div>
