--- a/minecraftpage.html
+++ b/minecraftpage.html
@@ -50,8 +50,8 @@
                     </div>
                 </div>
                 <div class="hero-visual">
-                    <div class="visual-placeholder" style="background: linear-gradient(135deg, #4A4A4A, #2D2D2D);">
-                        <div style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; font-size: 6rem;">⛏️</div>
+                    <div class="visual-placeholder">
+                        <img src="images_minecraft/logo.png" alt="Minecraft Logo" class="hero-photo">
                     </div>
                 </div>
             </div>
@@ -267,7 +267,7 @@
             const navLinks = document.querySelectorAll('.nav-link');
 
             const observerOptions = {
-                threshold: 0.3,
+                threshold: 0.1,
                 rootMargin: '0px 0px -50% 0px'
             };
 
