--- a/tagemage.html
+++ b/tagemage.html
@@ -198,12 +198,12 @@
                 <a href="index.html" class="nav-link" data-section="accueil" title="Retour au portfolio">
                     <span class="nav-dot"></span>
                     <span class="nav-text">Portfolio</span>
-                </a>
+                </a>S
             </div>
         </div>
         <div class="sidebar-bottom">
             <a href="index.html" class="btn-tage">
-                <span>← Retour</span>
+                <span>Retour</span>
                 <svg width="16" height="16" viewBox="0 0 16 16" fill="none">
                     <path d="M7 14L2 9M2 9L7 4M2 9H14" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
